--- a/client/components/input/style.module.css
+++ b/client/components/input/style.module.css
@@ -1,12 +1,17 @@
 .input-container {
   position: relative;
-
   width: 100%;
   margin-bottom: 20px;
+  display: flex;
+  justify-content: flex-start;
 }
 
 .input {
   width: 100%;
+  outline: none;
+}
+
+.checkbox {
   outline: none;
 }
 
