master add update initialvalues action

--- a/client/styles/reset.css
+++ b/client/styles/reset.css
@@ -33,9 +33,11 @@ body {
   line-height: 1.5;
 }
 
-ul[class],
-ol[class] {
+ul,
+ol {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 a:not([class]) {
