--- a/client/components/layout/style.module.css
+++ b/client/components/layout/style.module.css
@@ -4,6 +4,15 @@
   grid-gap: 20px;
 
   margin: 30px 0;
+  align-items: self-start;
+}
+
+.container ul {
+  grid-column: 1 / 3;
+}
+
+.container form {
+  grid-column: 4 / 10;
 }
 
 .main {
