--- a/client/components/layout/style.module.css
+++ b/client/components/layout/style.module.css
@@ -1,4 +1,4 @@
-.container {
+.container-list {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-gap: 20px;
@@ -7,11 +7,19 @@
   align-items: self-start;
 }
 
-.container ul {
+.container {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-gap: 20px;
+
+  margin: 30px 0;
+}
+
+.container-list ul {
   grid-column: 1 / 3;
 }
 
-.container form {
+.container-list form {
   grid-column: 4 / 10;
 }
 
